fix: target overflow when resizing page

--- a/nginx/src/css/friends.css
+++ b/nginx/src/css/friends.css
@@ -40,10 +40,16 @@
 	text-align: center;
 }
 
+.fr-invite-div {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 90%;
+}
+
 input#target {
 	width: 100%;
 	margin-top: 0.5rem;
-	margin-left: -1.5rem;
 	padding: 1.5rem;
 	font-size: 1.5rem;
 	border: 1px solid var(--line-clr);
